<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_orange"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_player_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginVertical="@dimen/vertical_padding"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/add_a_new_cryptogram"
        android:textColor="@color/color_white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_player_title">

        <TextView
            android:id="@+id/gui_crypto_name_text"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            android:layout_marginVertical="@dimen/vertical_padding"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Cryptogram Name: "
            android:textColor="@color/color_black"
            android:textSize="20sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/gui_crypto_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/gui_crypto_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/gui_crypto_name_text" />

        <TextView
            android:id="@+id/gui_crypto_ans_text"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            android:layout_marginVertical="@dimen/vertical_padding"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Cryptogram Answer:"
            android:textColor="@color/color_black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gui_crypto_name_text" />

        <EditText
            android:id="@+id/gui_crypto_ans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/gui_crypto_ans_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gui_crypto_ans_text" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/gui_crypto_num_tries_text"
            android:layout_width="317dp"
            android:layout_height="29dp"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            android:layout_marginVertical="@dimen/vertical_padding"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="# Tries Allowed per Difficulty:"
            android:textColor="@color/color_black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/gui_crypto_easy_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            android:layout_marginVertical="@dimen/vertical_padding"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="Easy:"
            android:textColor="@color/color_black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/gui_crypto_num_allowed_easy"
            android:layout_width="54dp"
            android:layout_height="37dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/gui_crypto_easy_text"
            app:layout_constraintStart_toEndOf="@+id/gui_crypto_easy_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gui_crypto_normal_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            android:layout_marginVertical="@dimen/vertical_padding"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="Normal:"
            android:textColor="@color/color_black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gui_crypto_easy_text" />

        <EditText
            android:id="@+id/gui_crypto_num_allowed_normal"
            android:layout_width="54dp"
            android:layout_height="37dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/gui_crypto_normal_text"
            app:layout_constraintStart_toEndOf="@+id/gui_crypto_normal_text" />

        <TextView
            android:id="@+id/gui_crypto_hard_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_padding"
            android:layout_marginVertical="@dimen/vertical_padding"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="right"
            android:text="Hard:"
            android:textColor="@color/color_black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gui_crypto_normal_text" />

        <EditText
            android:id="@+id/gui_crypto_num_allowed_hard"
            android:layout_width="54dp"
            android:layout_height="37dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/gui_crypto_hard_text"
            app:layout_constraintStart_toEndOf="@+id/gui_crypto_hard_text" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/create_player_btn_Save"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_background"
        android:onClick="saveCryptogram"
        android:text="Save"
        android:textColor="@color/color_orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>